[package]
name = "udf-examples"
version = "0.5.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lipsum = "0.9.0"
generic-array = "0.14.7"
sha2 = "0.10.6"
udf = { path = "../udf", features = ["mock", "logging-debug"] }
uuid = { version = "1.3.0", features = ["v1", "v3", "v4", "v5", "fast-rng"] }

[dev-dependencies]
diesel = { version = "2.0.3", default-features = false, features = ["mysql"] }
lazy_static = "1.4.0"

[features]
# Used to optionally enable integration tests
backend = []
