[package]
name = "udf-examples"
version = "0.5.4"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lipsum = "0.8.2"
generic-array = "1.0.0"
sha2 = "0.10.8"
udf = { path = "../udf", features = ["mock", "logging-debug"] }
uuid = { version = "1.8.0", features = ["v1", "v3", "v4", "v5", "fast-rng"] }

[dev-dependencies]
diesel = { version = "2.1.6", default-features = false, features = ["mysql"] }
lazy_static = "1.4.0"

[features]
# Used to optionally enable integration tests
backend = []
