[package]
name = "udf-examples"
version = "0.5.5"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lipsum = "0.8.2"
sha2 = "0.10.8"
udf = { path = "../udf", features = ["mock", "logging-debug"] }
uuid = { version = "1.8.0", features = ["v1", "v3", "v4", "v5", "fast-rng"] }

[dev-dependencies]
mysql = { version = "25.0.0", default-features = false, features = ["minimal"] }

[features]
# Used to optionally enable integration tests
backend = []
