[package]
name = "udf-macros"
version = "0.5.5"
edition = "2021"
description = "UDF procedural macros implementation"
repository = "https://github.com/pluots/sql-udf/tree/main/udf_macros"
license = "Apache-2.0 OR GPL-2.0-or-later"
publish = true
# autotests = false

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.53"
quote = "1.0.26"
syn = { version = "2.0.6", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }
udf = { path = "../udf" }
udf-sys = { path = "../udf-sys" }

[package.metadata.release]
shared-version = true
