[package]
name = "udf-derive"
version = "0.1.0"
edition = "2021"
description = "UDF procedural macros implementation"
repository = "https://github.com/pluots/udf/tree/main/udf_derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.42"
proc-macro-error = "1.0.4"
