[package]
name = "udf-macros"
version = "0.3.0"
edition = "2021"
description = "UDF procedural macros implementation"
repository = "https://github.com/pluots/udf/tree/main/udf_macros"
license = "Apache-2.0"
publish = true
# autotests = false

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.42"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.65", features = ["diff"] }
udf = { path = "../udf", version = "0.3.0" }
udf-sys = { path = "../udf_sys", version = "0.3.0" }

[package.metadata.release]
shared-version = true


# [[test]]
# name = "tests"
# path = "tests/harness.rs"

[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = 'udf = \{ path = "../udf_macros", version = .* \}'
replace = 'udf = { path = "../udf_macros", version = "0.3.0" }'

[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = 'udf = \{ path = "../udf_sys", version = .* \}'
replace = 'udf = { path = "../udf_sys", version = "0.3.0" }'
